--- a/mastering-vue-ex/package.json
+++ b/mastering-vue-ex/package.json
@@ -13,6 +13,7 @@
     "feather-icons": "^4.29.0",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vuejs-datepicker": "^1.6.2",
     "vuex": "^3.6.2",
     "webpack": "^5.80.0"
   },
